Learn HTML, CSS, JS

--- a/1-Basic-Web-Development/104-links.html
+++ b/1-Basic-Web-Development/104-links.html
@@ -5,10 +5,10 @@
     <p>HTML links are defined with the a tag:</p>
 
     <a href="https://www.codepassion.co">
-      This is a link
+      My Company Website
     </a>
 
-    <br />
+    <br/>
 
     <a href="https://github.com/savepong">My Github</a>
   </body>
