--- a/1-Basic-Web-Development/105-images.html
+++ b/1-Basic-Web-Development/105-images.html
@@ -4,8 +4,14 @@
     <h2>HTML Images</h2>
     <p>HTML images are defined with the img tag:</p>
 
+    <img 
+      src="https://images.unsplash.com/photo-1683025945257-12deaeefa1a8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1393&q=80"
+      alt="The Photograher"
+      width="100%"
+    />
+
     <!-- An image in another folder -->
-    <img src="/images/html5.gif" alt="HTML5 Icon" />
+    <img src="images/html5.gif" alt="HTML5 Icon" />
 
     <!-- An image on another server -->
     <img
