--- a/1-Basic-Web-Development/107-lists.html
+++ b/1-Basic-Web-Development/107-lists.html
@@ -3,8 +3,9 @@
   <body>
     <h2>An Unordered List</h2>
 
-    <ul>
-      <li>Coffee</li>
+    <!-- Unordered list -->
+    <ul> 
+      <li>Coffee</li> <!-- List Item -->
       <li>Tea</li>
       <li>Milk</li>
       <li>Beer 🍺</li>
@@ -12,8 +13,9 @@
 
     <h2>An Ordered List</h2>
 
+    <!-- Ordered list -->
     <ol>
-      <li>Coffee</li>
+      <li>Coffee</li> <!-- List Item -->
       <li>Tea</li>
       <li>Milk</li>
     </ol>
