--- a/1-Basic-Web-Development/110-styling.html
+++ b/1-Basic-Web-Development/110-styling.html
@@ -3,7 +3,9 @@
   <head>
     <style>
       body {
-        background-color: yellow;
+        background-color: #990000;
+        text-align: center;
+        color: white;
       }
     </style>
   </head>
@@ -15,7 +17,7 @@
     <p>I am normal</p>
 
     <p style="color: red;">I am red</p>
-    <p style="color: blue;">I am blue</p>
-    <p style="font-size: 50px;">I am big</p>
+    <p style="color: rgb(241, 238, 7);">I am yellow</p>
+    <p style="font-size: 100px;">I am big</p>
   </body>
 </html>
