--- a/1-Basic-Web-Development/109-media.html
+++ b/1-Basic-Web-Development/109-media.html
@@ -6,7 +6,7 @@
       Your browser does not support the audio element.
     </audio>
 
-    <video width="400" controls autoplay>
+    <video width="100%" controls autoplay>
       <source src="media/mov_bbb.mp4" type="video/mp4">
       Your browser does not support HTML video.
     </video>
@@ -27,5 +27,7 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GOWPYJspc2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html>
